--- a/src/app.css
+++ b/src/app.css
@@ -7,7 +7,7 @@ body {
     background-color: rgba(51, 51, 51, 0.637);
     color: white;
     border-radius: 14px;
-    margin-top: 12%;
+
     width: 50%;
 }
 
@@ -16,10 +16,19 @@ h1 {
     font-size: 45px;
 }
 
+.buttons {
+    display: grid;
+    grid-template-columns: 20% 20%;
+    grid-gap: 10px;
+    margin-top: 20px;
+    align-items: center;
+    justify-content: center;
+    
+    padding-bottom: 20px;
+}
+
 .btn-search {
-    margin-bottom: 20px;
-    margin-right: 10px;
-    margin-left: 10px;
+    display: none;
 }
 
 .form-control {
@@ -73,6 +82,7 @@ h1 {
     margin: auto;
     margin-bottom: 20px;
     display: none;
+    visibility: hidden;
 
 }
 
